k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: basic-k8s
  labels:
    name: basic-k8s
    module: Namespace
