k8s/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: basic-k8s
  labels:
    name: service
spec:
  selector:
    name: service
  ports:
    - name: service3333
      port: 3333
      targetPort: 3333
      protocol: TCP
  clusterIP: None
